--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
         <li>Each time when the game starts, the game will change the values of each crystal.</li>
     </ol>
     </div>
+    <div class="numberToMatch">
+        <h2>Number to get:
+            <span id= "randomNumber"></span>
+        </h2>
+    </div>
+    <div class="winsAndLosses">
+        <h2>Wins;
+            <span id= "numberWins"></span>
+        </br>
+        Losses:
+        <span id= "numberLosses"></span>
+        </h2>
+    </div>
+    <div class="gems">
+        <img src="assets/images/blue.png" class=gemImage id="one" alt="Blue Gem">
+        <img src="assets/images/green.png" class=GemImage id="two" alt="Green Gem">
+        <img src="assets/images/red.png" class=GemImage id="three" alt="Red Gem">
+        <img src="assets/images/yellow.png" class=GemImage id="four" alt="yellow"
+    </div>
 </body>
 </html>
