--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
         <img src="assets/images/blue.png" class=gemImage id="one" alt="Blue Gem">
         <img src="assets/images/green.png" class=GemImage id="two" alt="Green Gem">
         <img src="assets/images/red.png" class=GemImage id="three" alt="Red Gem">
-        <img src="assets/images/yellow.png" class=GemImage id="four" alt="yellow"
+        <img src="assets/images/yellow.png" class=GemImage id="four" alt="yellow">
     </div>
+    <div class="userTotal">
+        <h2>Your total score is:
+            <span id="finalTotal"></span>
+        </h2>
+    </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<script type="text/javascript" src="assets/javascript/javascript.js"></script>
 </body>
 </html>
