--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css"  href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css"  href="assets/css/style2.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="heade">
+    <div class="header">
         <h1>Crystal Collector</h1>
     </div>
     <div  class="instructions">
@@ -53,7 +55,7 @@
             <span id="finalTotal"></span>
         </h2>
     </div>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
-	<script type="text/javascript" src="assets/javascript/javascript.js"></script>
+    <script type="text/javascript" src="jquery-3.4.0.min.js"></script>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
