--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css"  href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css"  href="assets/css/style2.css">
-    <title>Document</title>
+    <title>Crystal Collector</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesHeet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -46,16 +44,16 @@
     </div>
     <div class="gems">
         <img src="assets/images/blue.png" class=gemImage id="one" alt="Blue Gem">
-        <img src="assets/images/green.png" class=GemImage id="two" alt="Green Gem">
-        <img src="assets/images/red.png" class=GemImage id="three" alt="Red Gem">
-        <img src="assets/images/yellow.png" class=GemImage id="four" alt="yellow">
+        <img src="assets/images/green.png" class=gemImage id="two" alt="Green Gem">
+        <img src="assets/images/red.png" class=gemImage id="three" alt="Red Gem">
+        <img src="assets/images/yellow.png" class=gemImage id="four" alt="yellow">
     </div>
     <div class="userTotal">
         <h2>Your total score is:
             <span id="finalTotal"></span>
         </h2>
     </div>
-    <script type="text/javascript" src="jquery-3.4.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
